--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -6,10 +6,8 @@
   },
   "rich-text": { 
     "props": { 
-      "text": "VTEX Store Framework",
-      "textAlignment": "CENTER",
-      "textPosition": "CENTER",
-      "font": "t-heading-1"
+      "text": "**Hello, World**",
+      "textPosition": "RIGHT"
     }
   }
 }
