--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,18 +1,51 @@
 {
-  "store.home": { 
+  "store.home": {
     "blocks": [
-      "flex-layout.row"
+      "rich-text",
+      "info-card#button-right",
+      "info-card#button-left",
+      "flex-layout.row",
+      "slider-layout#home"
     ]
   },
-  
-  "flex-layout.row":{
+  "rich-text": {
+    "props": {
+      "text": "**Hello, world**",
+      "textPosition": "RIGHT"
+    }
+  },
+  "info-card#button-right": {
+    "props": {
+      "isFullModeStyle": false,
+      "textPosition": "right",
+      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-rosa-min.png",
+      "headline": "Vintage Pink",
+      "subhead": "Give your kitchen a boho style adding vintage apparels.<br>Available until January 2020.",
+      "callToActionMode": "button",
+      "callToActionText": "Explore",
+      "callToActionUrl": "/sale/d",
+      "textAlignment": "center"
+    }
+  },
+  "info-card#button-left": {
+    "props": {
+      "isFullModeStyle": false,
+      "textPosition": "left",
+      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-cinza-min.png",
+      "headline": "Shining chrome",
+      "subhead": "Give your kitchen a cool style adding warm metallic finishes.<br>Available until January 2020.",
+      "callToActionMode": "link",
+      "callToActionText": "Go to collection",
+      "textAlignment": "center"
+    }
+  },
+  "flex-layout.row": {
     "children": [
       "info-card#rethink",
       "flex-layout.col"
     ]
   },
-
- "info-card#rethink": {
+  "info-card#rethink": {
     "props": {
       "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/utensilios-cozinha-min.png",
       "isFullModeStyle": true,
@@ -21,14 +54,12 @@
       "textPosition": "center"
     }
   },
-
   "flex-layout.col": {
     "children": [
       "image#electronics",
       "image#major-appliance"
     ]
   },
-
   "image#electronics": {
     "props": {
       "src": "https://appliancetheme.vteximg.com.br/assets/vtex.file-manager-graphql/images/electronics_banner___25d69b49f8224b369375e68513b4d593.png",
